Bug 268898- Team details text overlapping issue

--- a/src/app/administration/admin-regulatory-reporting/eyc-team-details/eyc-team-details.component.scss
+++ b/src/app/administration/admin-regulatory-reporting/eyc-team-details/eyc-team-details.component.scss
@@ -174,7 +174,8 @@ motif-icon.motif-icon.user-edit {
     font-weight: 400;
     font-size: 16px;
     line-height: 25px;
-    color: #2E2E38
+    color: #2E2E38;
+    word-wrap: break-word;
   }
 
   .cust-col-role {
